--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -699,6 +699,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="cubes.ico" />
+    <None Include="Resources\flag_portugal.png" />
     <None Include="Resources\catalan.png" />
     <None Include="Resources\250px-Flag_of_the_Basque_Country.svg.png" />
     <None Include="Resources\flag_sweden.png" />
@@ -715,7 +716,6 @@
     <None Include="Resources\flag_taiwan.png" />
     <None Include="Resources\flag_china.png" />
     <None Include="Resources\flag_czech_republic.png" />
-    <None Include="Resources\flag_brazil.png" />
     <None Include="Resources\flag_france.png" />
     <None Include="Resources\flag_usa.png" />
     <None Include="Resources\Better.jpg" />
