--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -358,6 +358,12 @@
     <Compile Include="FormRestart.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="FormScripts.Designer.vb">
+      <DependentUpon>FormScripts.vb</DependentUpon>
+    </Compile>
+    <Compile Include="FormScripts.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FormServerType.Designer.vb">
       <DependentUpon>FormServerType.vb</DependentUpon>
     </Compile>
@@ -550,6 +556,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormRestart.resx">
       <DependentUpon>FormRestart.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormScripts.resx">
+      <DependentUpon>FormScripts.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormServerType.resx">
       <DependentUpon>FormServerType.vb</DependentUpon>
