--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -718,6 +718,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="cubes.ico" />
+    <None Include="Resources\flag_poland.png" />
     <None Include="Resources\flag_portugal.png" />
     <None Include="Resources\catalan.png" />
     <None Include="Resources\250px-Flag_of_the_Basque_Country.svg.png" />
