--- a/Start.exe.config
+++ b/Start.exe.config
@@ -31,7 +31,7 @@
   <userSettings>
     <Outworldz.My.MySettings>
       <setting name="AutoBackup" serializeAs="String">
-        <value>true</value>
+        <value>True</value>
       </setting>
       <setting name="PublicIP" serializeAs="String">
         <value>127.0.0.1</value>
@@ -82,16 +82,16 @@
         <value>0</value>
       </setting>
       <setting name="region_owner_is_god" serializeAs="String">
-        <value>false</value>
+        <value>False</value>
       </setting>
       <setting name="region_manager_is_god" serializeAs="String">
-        <value>false</value>
+        <value>False</value>
       </setting>
       <setting name="TimerInterval" serializeAs="String">
         <value>60</value>
       </setting>
       <setting name="AccountConfirmationRequired" serializeAs="String">
-        <value>true</value>
+        <value>True</value>
       </setting>
       <setting name="SmtPropUserName" serializeAs="String">
         <value>Gmail for notification</value>
@@ -100,19 +100,19 @@
         <value>Gmail password</value>
       </setting>
       <setting name="RanAllDiags" serializeAs="String">
-        <value>false</value>
+        <value>False</value>
       </setting>
       <setting name="SkipUpdateCheck" serializeAs="String">
-        <value>false</value>
+        <value>False</value>
       </setting>
       <setting name="DiagFailed" serializeAs="String">
-        <value>false</value>
+        <value>False</value>
       </setting>
       <setting name="DnsName" serializeAs="String">
         <value />
       </setting>
       <setting name="WebStats" serializeAs="String">
-        <value>true</value>
+        <value>True</value>
       </setting>
       <setting name="HttpPort" serializeAs="String">
         <value>8002</value>
@@ -121,10 +121,10 @@
         <value />
       </setting>
       <setting name="LoopBackDiag" serializeAs="String">
-        <value>false</value>
+        <value>False</value>
       </setting>
       <setting name="UPnpDiag" serializeAs="String">
-        <value>false</value>
+        <value>False</value>
       </setting>
       <setting name="SplashPage" serializeAs="String">
         <value />
@@ -142,7 +142,7 @@
         <value>127.0.0.1</value>
       </setting>
       <setting name="VivoxEnabled" serializeAs="String">
-        <value>false</value>
+        <value>False</value>
       </setting>
       <setting name="Vivox_username" serializeAs="String">
         <value>someusername</value>
@@ -157,13 +157,13 @@
         <value>AutoBackup</value>
       </setting>
       <setting name="DiagsRun2" serializeAs="String">
-        <value>false</value>
+        <value>False</value>
       </setting>
       <setting name="GloebitsEnable" serializeAs="String">
-        <value>false</value>
+        <value>False</value>
       </setting>
       <setting name="GloebitsMode" serializeAs="String">
-        <value>false</value>
+        <value>False</value>
       </setting>
       <setting name="GLSandKey" serializeAs="String">
         <value>OAuth Sandbox key</value>
@@ -193,7 +193,7 @@
         <value>opensim</value>
       </setting>
       <setting name="WifiEnabled" serializeAs="String">
-        <value>true</value>
+        <value>True</value>
       </setting>
       <setting name="DiagnosticPort" serializeAs="String">
         <value>8001</value>
@@ -208,25 +208,19 @@
         <value>robustpassword</value>
       </setting>
       <setting name="Autostart" serializeAs="String">
-        <value>false</value>
+        <value>False</value>
       </setting>
       <setting name="BootStart" serializeAs="String">
-        <value>false</value>
+        <value>False</value>
       </setting>
       <setting name="EnableHypergrid" serializeAs="String">
-        <value>true</value>
+        <value>True</value>
       </setting>
       <setting name="AutoLoad" serializeAs="String">
-        <value>false</value>
+        <value>False</value>
       </setting>
       <setting name="RunOnce" serializeAs="String">
-        <value>false</value>
-      </setting>
-      <setting name="AvatarShow" serializeAs="String">
-        <value>true</value>
-      </setting>
-      <setting name="ViewerEase" serializeAs="String">
-        <value>false</value>
+        <value>False</value>
       </setting>
       <setting name="GridFolder" serializeAs="String">
         <value>Opensim</value>
@@ -236,12 +230,6 @@
       </setting>
       <setting name="MySqlRobustDBPort" serializeAs="String">
         <value>3306</value>
-      </setting>
-      <setting name="allow_grid_gods" serializeAs="String">
-        <value>false</value>
-      </setting>
-      <setting name="parcel_owner_is_god" serializeAs="String">
-        <value>false</value>
       </setting>
       <setting name="DBName" serializeAs="String">
         <value>opensim</value>
@@ -258,22 +246,34 @@
       <setting name="MyIP" serializeAs="String">
         <value />
       </setting>
-      <setting name="DiagsRun" serializeAs="String">
-        <value>false</value>
-      </setting>
       <setting name="WelcomeRegion" serializeAs="String">
         <value>0</value>
       </setting>
       <setting name="UPnPEnabled" serializeAs="String">
-        <value>true</value>
+        <value>True</value>
       </setting>
       <setting name="SimName" serializeAs="String">
         <value>DreamGrid</value>
       </setting>
       <setting name="EnableWindowsFormsHighDpiAutoResizing" serializeAs="String">
-        <value>true</value>
+        <value>True</value>
       </setting>
       <setting name="ConsoleShow" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="AvatarShow" serializeAs="String">
+        <value>true</value>
+      </setting>
+      <setting name="ViewerEase" serializeAs="String">
+        <value>false</value>
+      </setting>
+      <setting name="allow_grid_gods" serializeAs="String">
+        <value>false</value>
+      </setting>
+      <setting name="parcel_owner_is_god" serializeAs="String">
+        <value>false</value>
+      </setting>
+      <setting name="DiagsRun" serializeAs="String">
         <value>false</value>
       </setting>
     </Outworldz.My.MySettings>
