--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,24 @@
+en
+ca
+cs
+de
+el
+rn
+es-MX
+eu
+fi
+fr
+ga
+he
+is
+nl-NL
+no
+pl
+pt
+ru
+sv
+zh-cn
+zh-tw
 baretail.udm
 /OutworldzFiles/Apache/htdocs/Joomla
 *.pid
@@ -7,8 +28,8 @@ fw.bat
 Outworldzfiles/Photo.png
 UDProxy
 OutworldzFiles/mysql/Data
-/Outworldzfiles/Opensim/WifiPages/*
-/Outworldzfiles/Opensim/bin/WifiPages/*
+/Outworldzfiles/Opensim/WifiPages/
+/Outworldzfiles/Opensim/bin/WifiPages/
 /OutworldzFiles/mysql/data/*.err
 /OutworldzFiles/Opensim/bin/addin-db-002/*
 LocalUserStatistics.db
