Add cports.exe to Help menu,DoEvents,  Start Icecast earlier

--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -718,6 +718,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="cubes.ico" />
+    <None Include="Resources\server_connection.png" />
     <None Include="Resources\flag_poland.png" />
     <None Include="Resources\flag_portugal.png" />
     <None Include="Resources\catalan.png" />
