--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -25,24 +25,24 @@
 
 ;; Set by Dreamgrid
 ; ${Const|GridName}
-GridName=Mach
-http_listener_port=8002
+GridName=Outworldz Grid
+http_listener_port=9000
 
 ;; Set by Dreamgrid
 ; The URL of the Robust server
-BaseURL=http://mach.outworldz.net
+BaseURL=http://www.outworldz.com
 
 ; The URL of the Robust server, if PublicPort and PrivatePort must be
 ; accessed via different hostnames as in the case of a NAT gateway
-PrivURL=http://192.168.2.135
+PrivURL=http://192.168.2.140
 
 ;; Set by Dreamgrid
 ; The public port of the Robust server
-PublicPort=8002
+PublicPort=9000
 
 ;; Set by Dreamgrid
 ; The private port of the Robust server
-PrivatePort=8003
+PrivatePort=9001
 DiagnosticsPort=8001
 
 ; * The startup section lists all the connectors to start up in this server
@@ -250,7 +250,7 @@ GatekeeperURI="${Const|BaseURL}:${Const|PublicPort}"
 ; Change the connection string to your db details
 ;; Set by Dreamgrid
 StorageProvider="OpenSim.Data.MySQL.dll"
-ConnectionString="Data Source=127.0.0.1;Database=robust;Port=3306;User ID=robustuser;Password=robustpassword;Old Guids=true;Allow Zero Datetime=true;Connect Timeout=28800;Command Timeout=28800;"
+ConnectionString="Data Source=127.0.0.1;Database=robust;Port=3306;User ID=robustuser;Password=Robustness;Old Guids=true;Allow Zero Datetime=true;Connect Timeout=28800;Command Timeout=28800;"
 
 ; * As an example, the below configuration precisely mimicks the legacy
 ; * asset server. It is read by the asset IN connector (defined above)
@@ -260,13 +260,13 @@ ConnectionString="Data Source=127.0.0.1;Database=robust;Port=3306;User ID=robust
 [AssetService]
 
 ;; Choose an asset service (Only one option should be enabled)
-LocalServiceModule=OpenSim.Services.AssetService.dll:AssetService
+LocalServiceModule=OpenSim.Services.FSAssetService.dll:FSAssetConnector
 
 ;LocalServiceModule="OpenSim.Services.FSAssetService.dll:FSAssetConnector"
 ;; FSAsset Directories. Base directory, where final asset files are stored and Spool directory for temp files
 ;; These directories must be on the same physical filesystem
-BaseDirectory=./fsassets/data
-SpoolDirectory=./fsassets/tmp
+BaseDirectory=C:\FSAssets/data
+SpoolDirectory=C:\FSAssets/tmp
 
 ;; Original service can be checked if FSAssets can not find an asset
 FallbackService=OpenSim.Services.AssetService.dll:AssetService
@@ -276,7 +276,7 @@ FallbackService=OpenSim.Services.AssetService.dll:AssetService
 DaysBetweenAccessTimeUpdates=30
 
 ;; Should FSAssets print read/write stats to the robust console, default is true
-ShowConsoleStats=True
+ShowConsoleStats=False
 
 ;; FSAssets Custom Database Config (Leave blank to use grids default database configuration)
 ;StorageProvider=
@@ -348,8 +348,59 @@ AssetService="OpenSim.Services.AssetService.dll:AssetService"
 ;;
 ;; Set by Dreamgrid
 ;;
+; START  <= Leave this line
+Region_AlphaCentauriTrek=FallbackRegion
+Region_Free_Angkor_sim=FallbackRegion
+Region_Free_Avatar_Center_Sim=FallbackRegion
+Region_Big_N_Large=FallbackRegion
+Region_Cyber=FallbackRegion
+Region_Dragons!=FallbackRegion
+Region_Virunga!=FallbackRegion
+Region_Free_Alpha_Station_Sim=FallbackRegion
+Region_Free_Danger_Sim_-_a_Game=FallbackRegion
+Region_Free_Fairy_Island=FallbackRegion
+Region_Free_Garden_By_The_Sea=FallbackRegion
+Region_Free_Habitat39_Sim=FallbackRegion
+Region_Free_Hypermall_Sim=FallbackRegion
+Region_Free_Star_Wars_Sim=FallbackRegion
+Region_Free_Isis_Sim=FallbackRegion
+Region_Free_Pirates_Island_Sim=FallbackRegion
+Region_Free_Sanitarium_Sim=FallbackRegion
+Region_Free_SwanLake_Sim=FallbackRegion
+Region_Free_Tropical_Island_Sim=FallbackRegion
+Region_Free_UnderWater_Sim=FallbackRegion
+Region_Free_Waterlilies_Sim=FallbackRegion
+Region_Alexandria=FallbackRegion
+Region_Enchanted=FallbackRegion
+Region_Franki=FallbackRegion
+Region_Free_Future_Sim=FallbackRegion
+Region_Free_Gravity_Sim=FallbackRegion
+Region_The_Hobbiton_Collection=FallbackRegion
+Region_Hyperica=FallbackRegion
+Region_Free_Linda_Kelly_Freebies__Sim=FallbackRegion
+Region_Mermaid=FallbackRegion
+Region_Cinderella_Snowgarde=FallbackRegion
+Region_Easthold=FallbackRegion
+Region_MotherGoose=FallbackRegion
+Region_Rapunzel=FallbackRegion
+Region_Rockbell=FallbackRegion
+Region_Mountains=FallbackRegion
+Region_OldRome=FallbackRegion
+Region_Phaze-Dragons=FallbackRegion
+Region_Raceway=FallbackRegion
+Region_Roller_Coaster=FallbackRegion
+Region_Dinotopia=FallbackRegion
+Region_Rome=FallbackRegion
+Region_RomeSouth=FallbackRegion
+Region_SandBox=FallbackRegion
+Region_Sunjo=FallbackRegion
+Region_DreamGrid_Test_Region=FallbackRegion
+Region_Underground=FallbackRegion
+Region_Virunga=FallbackRegion
+Region_Free_WeddingWoods_Sim=FallbackRegion
 Region_Welcome="DefaultRegion, DefaultHGRegion"
 
+; END  <= Leave this line
 ;; Allow Hyperlinks to be created at the console
 HypergridLinker=true
 
@@ -510,7 +561,7 @@ Currency="G$"
 ClassifiedFee=0
 
 ;;
-WelcomeMessage=Welcome to Mach , <USERNAME>
+WelcomeMessage=Welcome to Outworldz Grid , <USERNAME>
 AllowRemoteSetLoginLevel="false"
 
 ; For V2 map
@@ -615,7 +666,7 @@ gridnick=${Const|GridName}
 ; login page: optional: if it exists it will be used to tell the client to use
 ;                       this as splash page
 ;; Set by Dreamgrid
-welcome=https://outworldz.com/Outworldz_installer/Welcome.htm
+welcome=http://www.Outworldz.com:9000/
 
 ; helper uri: optional: if it exists it will be used to tell the client to use
 ;                       this for all economy related things
@@ -732,7 +783,7 @@ UserAccountService="OpenSim.Services.UserAccountService.dll:UserAccountService"
 
 ; For the InventoryServiceInConnector
 ;; set by Dreamgrid
-LocalServiceModule=OpenSim.Services.HypergridService.dll:HGSuitcaseInventoryService
+LocalServiceModule=OpenSim.Services.HypergridService.dll:HGInventoryService
 
 ;; alternatives:
 ;;  HG1.5, more permissive, not recommended, but still supported
@@ -757,7 +808,7 @@ AuthType=None
 [HGAssetService]
 
 ;; Use the second option if you have FSAsset service enabled
-LocalServiceModule=OpenSim.Services.HypergridService.dll:HGAssetService
+LocalServiceModule=OpenSim.Services.HypergridService.dll:HGFSAssetService
 
 ;LocalServiceModule = "OpenSim.Services.HypergridService.dll:HGFSAssetService"
 UserAccountsService="OpenSim.Services.UserAccountService.dll:UserAccountService"
@@ -816,8 +867,6 @@ HomeURI="${Const|BaseURL}:${Const|PublicPort}"
 ;; end hypergrid
 ;; Sets the maximum number of groups an agent may join
 ; MaxAgentGroups = 42
-
-
 [UserProfilesService]
 LocalServiceModule="OpenSim.Services.UserProfilesService.dll:UserProfilesService"
 Enabled=true
@@ -840,8 +889,8 @@ LocalServiceModule="OpenSim.Services.MuteListService.dll:MuteListService"
 [SMTP]
 SMTP_SERVER_HOSTNAME=smtp.gmail.com
 SMTP_SERVER_PORT=587
-SMTP_SERVER_LOGIN=Gmail for notification
-SMTP_SERVER_PASSWORD=Gmail password
+SMTP_SERVER_LOGIN=fred.beckhusen@gmail.com
+SMTP_SERVER_PASSWORD=Root1root
 
 ; Automatically changed by Dreamworld - do not change this - Should be True ( case sensitive)
 ;; Set to True to enable Smart Start
