--- a/Installer_Src/CodeMaid.config
+++ b/Installer_Src/CodeMaid.config
@@ -45,6 +45,13 @@
             <setting name="Cleaning_PerformPartialCleanupOnExternal" serializeAs="String">
                 <value>1</value>
             </setting>
+            <setting name="Formatting_CommentXmlSplitSummaryTagToMultipleLines"
+                serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Formatting_CommentRunDuringCleanup" serializeAs="String">
+                <value>True</value>
+            </setting>
         </SteveCadwallader.CodeMaid.Properties.Settings>
     </userSettings>
 </configuration>
