--- a/OutworldzFiles/Opensim/bin/Robust.exe.config
+++ b/OutworldzFiles/Opensim/bin/Robust.exe.config
@@ -12,19 +12,19 @@
   <log4net>
     <appender name="Console" type="OpenSim.Framework.Console.OpenSimAppender, OpenSim.Framework.Console">
       <filter type="log4net.Filter.LoggerMatchFilter">
-        <loggerToMatch value="special"/>
-        <acceptOnMatch value="false"/>
+        <loggerToMatch value="special" />
+        <acceptOnMatch value="false" />
       </filter>
       <layout type="log4net.Layout.PatternLayout">
         <conversionPattern value="%date{HH:mm:ss} - %message" />
       </layout>
     </appender>
 
-<!-- If you want automatic log-rolling then use RollingFileAppender instead of FileAppender:
+    <!-- If you want automatic log-rolling then use RollingFileAppender instead of FileAppender:
     <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
       <file value="log/Robust.log" />
       <rollingStyle value="Date" />
-      <datePattern value="'.'yyyy-MM-dd"/>
+      <datePattern value="'.'yyyy-MM-dd" />
       ...
 -->
 
@@ -32,8 +32,8 @@
       <file value="Robust.log" />
       <appendToFile value="true" />
       <filter type="log4net.Filter.LoggerMatchFilter">
-        <loggerToMatch value="special"/>
-        <acceptOnMatch value="false"/>
+        <loggerToMatch value="special" />
+        <acceptOnMatch value="false" />
       </filter>
       <layout type="log4net.Layout.PatternLayout">
         <conversionPattern value="%date %-5level (%thread) - %logger %message%newline" />
@@ -41,7 +41,7 @@
     </appender>
 
     <appender name="StatsLogFileAppender" type="log4net.Appender.FileAppender">
-      <file value="RobustStats.log"/>
+      <file value="RobustStats.log" />
       <appendToFile value="true" />
       <layout type="log4net.Layout.PatternLayout">
         <conversionPattern value="%date - %message%newline" />
@@ -49,14 +49,14 @@
     </appender>
 
     <root>
-      <level value="DEBUG" />
+      <level value="INFO" />
       <appender-ref ref="Console" />
       <appender-ref ref="LogFileAppender" />
     </root>
 
     <!-- used for stats recording -->
     <logger name="special.StatsLogger">
-      <appender-ref ref="StatsLogFileAppender"/>
+      <appender-ref ref="StatsLogFileAppender" />
     </logger>
   </log4net>
 </configuration>
