--- a/Installer_Src/CodeMaid.config
+++ b/Installer_Src/CodeMaid.config
@@ -52,6 +52,15 @@
             <setting name="Formatting_CommentRunDuringCleanup" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="Feature_CleanupAllCode" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Feature_CleanupOpenCode" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Feature_CleanupSelectedCode" serializeAs="String">
+                <value>False</value>
+            </setting>
         </SteveCadwallader.CodeMaid.Properties.Settings>
     </userSettings>
 </configuration>
