IAR/OAR Threading

--- a/Installer_Src/CodeMaid.config
+++ b/Installer_Src/CodeMaid.config
@@ -21,10 +21,10 @@
                 <value>1</value>
             </setting>
             <setting name="Reorganizing_RegionsInsertNewRegions" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="Reorganizing_RegionsIncludeAccessLevel" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="Cleaning_RemoveEndOfFileTrailingNewLine" serializeAs="String">
                 <value>False</value>
@@ -59,6 +59,12 @@
                 <value>False</value>
             </setting>
             <setting name="Feature_CleanupSelectedCode" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Cleaning_RemoveRegions" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Reorganizing_RegionsInsertKeepEvenIfEmpty" serializeAs="String">
                 <value>False</value>
             </setting>
         </SteveCadwallader.CodeMaid.Properties.Settings>
