--- a/Installer_Src/CodeMaid.config
+++ b/Installer_Src/CodeMaid.config
@@ -24,7 +24,7 @@
                 <value>False</value>
             </setting>
             <setting name="Reorganizing_RegionsIncludeAccessLevel" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="Cleaning_RemoveEndOfFileTrailingNewLine" serializeAs="String">
                 <value>False</value>
