--- a/Installer_Src/CodeMaid.config
+++ b/Installer_Src/CodeMaid.config
@@ -67,6 +67,9 @@
             <setting name="Reorganizing_RegionsInsertKeepEvenIfEmpty" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="Formatting_CommentWrapColumn" serializeAs="String">
+                <value>100</value>
+            </setting>
         </SteveCadwallader.CodeMaid.Properties.Settings>
     </userSettings>
 </configuration>
