--- a/Updater_Src/Downloader/Downloader.vbproj
+++ b/Updater_Src/Downloader/Downloader.vbproj
@@ -8,10 +8,10 @@
     <OutputType>WinExe</OutputType>
     <StartupObject>Outworldz.My.MyApplication</StartupObject>
     <RootNamespace>Outworldz</RootNamespace>
-    <AssemblyName>DreamGridSetup</AssemblyName>
+    <AssemblyName>Downloader</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>WindowsForms</MyType>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <TargetFrameworkProfile />
@@ -96,10 +96,9 @@
     <ApplicationIcon>cubes_blue.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Ionic.Zip, Version=1.9.1.8, Culture=neutral, PublicKeyToken=edbe51ad942a3f5c, processorArchitecture=MSIL">
-      <HintPath>packages\Ionic.Zip.1.9.1.8\lib\Ionic.Zip.dll</HintPath>
-      <SpecificVersion>False</SpecificVersion>
-      <Private>False</Private>
+    <Reference Include="DotNetZip, Version=1.11.0.0, Culture=neutral, PublicKeyToken=6583c7c814667745, processorArchitecture=MSIL">
+      <HintPath>packages\DotNetZip.1.11.0\lib\net20\DotNetZip.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -141,11 +140,10 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="Resources\Core.vb" />
-    <Compile Include="UpdateGrid.Designer.vb">
-      <DependentUpon>UpdateGrid.vb</DependentUpon>
+    <Compile Include="Downloader.Designer.vb">
+      <DependentUpon>Downloader.vb</DependentUpon>
     </Compile>
-    <Compile Include="UpdateGrid.vb">
+    <Compile Include="Downloader.vb">
       <SubType>Form</SubType>
     </Compile>
   </ItemGroup>
@@ -156,8 +154,8 @@
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="UpdateGrid.resx">
-      <DependentUpon>UpdateGrid.vb</DependentUpon>
+    <EmbeddedResource Include="Downloader.resx">
+      <DependentUpon>Downloader.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -172,6 +170,7 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
@@ -187,10 +186,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="cubes_blue.ico" />
-    <None Include="packages\Ionic.Zip.1.9.1.8\lib\Ionic.Zip.dll" />
-    <None Include="packages.config" />
+    <None Include="Resources\copper.gif" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
