--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -256,6 +256,12 @@
     <Compile Include="FormIARSave.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="FormLogging.Designer.vb">
+      <DependentUpon>FormLogging.vb</DependentUpon>
+    </Compile>
+    <Compile Include="FormLogging.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FormOAR.Designer.vb">
       <DependentUpon>FormOAR.vb</DependentUpon>
     </Compile>
@@ -499,6 +505,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormIARSave.resx">
       <DependentUpon>FormIARSave.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormLogging.resx">
+      <DependentUpon>FormLogging.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormOAR.resx">
       <DependentUpon>FormOAR.vb</DependentUpon>
