Do not remove regions

--- a/Installer_Src/CodeMaid.config
+++ b/Installer_Src/CodeMaid.config
@@ -70,6 +70,12 @@
             <setting name="Formatting_CommentWrapColumn" serializeAs="String">
                 <value>100</value>
             </setting>
+            <setting name="General_IconSet" serializeAs="String">
+                <value>3</value>
+            </setting>
+            <setting name="Feature_RemoveRegion" serializeAs="String">
+                <value>False</value>
+            </setting>
         </SteveCadwallader.CodeMaid.Properties.Settings>
     </userSettings>
 </configuration>
