--- a/Installer_Src/CodeMaid.config
+++ b/Installer_Src/CodeMaid.config
@@ -7,27 +7,50 @@
     </configSections>
     <userSettings>
         <SteveCadwallader.CodeMaid.Properties.Settings>
-            <setting name="Feature_CleanupAllCode" serializeAs="String">
+            <setting name="Reorganizing_RegionsInsertKeepEvenIfEmpty" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="Feature_CleanupOpenCode" serializeAs="String">
+            <setting name="Reorganizing_RegionsInsertNewRegions" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="Feature_CleanupSelectedCode" serializeAs="String">
+            <setting name="Reorganizing_RegionsIncludeAccessLevel" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="Cleaning_AutoCleanupOnFileSave" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="Formatting_IgnoreLinesStartingWith" serializeAs="String">
-                <value>&lt;?xml version="1.0" encoding="utf-16"?&gt;
-&lt;ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;string&gt;ReSharper disable &lt;/string&gt;
-  &lt;string&gt;ReSharper enable &lt;/string&gt;
-&lt;/ArrayOfString&gt;</value>
+            <setting name="Cleaning_RemoveRegions" serializeAs="String">
+                <value>0</value>
             </setting>
-            <setting name="Cleaning_IncludeEverythingElse" serializeAs="String">
+            <setting name="Feature_CleanupAllCode" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Digging_SecondarySortTypeByName" serializeAs="String">
                 <value>True</value>
+            </setting>
+            <setting name="Reorganizing_ExplicitMembersAtEnd" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Feature_CleanupOpenCode" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Feature_CommentFormat" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Feature_CleanupSelectedCode" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Feature_RemoveRegion" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Feature_SettingCleanupOnSave" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Digging_PrimarySortOrder" serializeAs="String">
+                <value>2</value>
+            </setting>
+            <setting name="Finding_TemporarilyOpenSolutionFolders" serializeAs="String">
+                <value>False</value>
             </setting>
         </SteveCadwallader.CodeMaid.Properties.Settings>
     </userSettings>
