Allow_osMessageObject = true for Farms

--- a/OutworldzFiles/Opensim/bin/config-include/osslEnableDG.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/osslEnableDG.ini
@@ -121,7 +121,7 @@
   Allow_osLoadedCreationDate =      ${OSSL|osslParcelOG}ESTATE_MANAGER,ESTATE_OWNER
   Allow_osLoadedCreationID =        ${OSSL|osslParcelOG}ESTATE_MANAGER,ESTATE_OWNER
   Allow_osLoadedCreationTime =      ${OSSL|osslParcelOG}ESTATE_MANAGER,ESTATE_OWNER
-  Allow_osMessageObject =           ${OSSL|osslParcelOG}ESTATE_MANAGER,ESTATE_OWNER
+  Allow_osMessageObject =           true
   Allow_osRegexIsMatch =            true
   Allow_osGetAvatarHomeURI =        ${OSSL|osslParcelOG}ESTATE_MANAGER,ESTATE_OWNER
   Allow_osNpcSetProfileAbout =      ${OSSL|osslNPC}
