Add  notecard reader

--- a/OutworldzFiles/Opensim/bin/config-include/osslEnableDG.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/osslEnableDG.ini
@@ -209,7 +209,7 @@
   Allow_osForceDetachFromAvatar =   ESTATE_MANAGER,ESTATE_OWNER
   Allow_osForceOtherSit =           ESTATE_MANAGER,ESTATE_OWNER
   ; The notecard functions can cause a lot of load on the region if over used
-  Allow_osGetNotecard =             ${OSSL|osslParcelO}ESTATE_MANAGER,ESTATE_OWNER
+  Allow_osGetNotecard =             true
   Allow_osGetNotecardLine =         ${OSSL|osslParcelO}ESTATE_MANAGER,ESTATE_OWNER
   Allow_osGetNumberOfNotecardLines = ${OSSL|osslParcelO}ESTATE_MANAGER,ESTATE_OWNER
   Allow_osSetDynamicTextureURL =    ESTATE_MANAGER,ESTATE_OWNER
