--- a/OutworldzFiles/Apache/conf/httpd.conf
+++ b/OutworldzFiles/Apache/conf/httpd.conf
@@ -37,7 +37,7 @@
 
 
 # changed by Dreamgrid
-Define SRVROOT "O:/Opensim/Outworldz_Dreamgrid/Outworldzfiles/Apache" 
+Define SRVROOT "O:/Opensim/Outworldz_Dreamgrid/Outworldzfiles/Apache"
 ServerRoot "${SRVROOT}"
 
 #
@@ -252,7 +252,7 @@ ServerAdmin email@somewhere.com
 # If your host doesn't have a registered DNS name, enter its IP address here.
 #
 # changed by Dreamgrid
-ServerName 192.168.2.135
+ServerName Mach.Outworldz.net
 
 # This fixes a bug with the OS
 AcceptFilter http none
@@ -345,7 +345,7 @@ Timeout 5000
 
 # must be flush aligned left
 # changed by Dreamgrid
-ServerName 192.168.2.135
+ServerName Mach.Outworldz.net
 
 # in case you want a different URL for your servers Web site yet still have Apache on.
 #Redirect permanent / https://google.com
