--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -707,6 +707,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="cubes.ico" />
+    <None Include="Resources\basque.png" />
     <None Include="Resources\view1.png" />
     <None Include="Resources\view.png" />
     <None Include="Resources\selection_view.png" />
