--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -30,11 +30,11 @@ http_listener_port=8002
 
 ;; Set by Dreamgrid
 ; The URL of the Robust server
-BaseURL=http://mach.outworldz.net
+BaseURL=http://192.168.2.133
 
 ; The URL of the Robust server, if PublicPort and PrivatePort must be
 ; accessed via different hostnames as in the case of a NAT gateway
-PrivURL=http://192.168.2.135
+PrivURL=http://192.168.2.133
 
 ;; Set by Dreamgrid
 ; The public port of the Robust server
@@ -349,19 +349,6 @@ AssetService="OpenSim.Services.AssetService.dll:AssetService"
 ;; Set by Dreamgrid
 ;;
 ; START  <= Leave this line
-Region_1=FallbackRegion
-Region_2=FallbackRegion
-Region_3=FallbackRegion
-Region_4=FallbackRegion
-Region_5=FallbackRegion
-Region_6=FallbackRegion
-Region_7=FallbackRegion
-Region_8=FallbackRegion
-Region_9=FallbackRegion
-Region_Sandbox=FallbackRegion
-Region_Multi1=FallbackRegion
-Region_Multi2=FallbackRegion
-Region_Multi3=FallbackRegion
 Region_Welcome="DefaultRegion, DefaultHGRegion"
 
 ; END  <= Leave this line
@@ -641,13 +628,14 @@ economy=${Const|BaseURL}:${Const|PublicPort}
 ;about = ${Const|BaseURL}/about
 ; account creation: optional: page providing further information about obtaining
 ;                             a user account on your grid
-register=${Const|BaseURL}:${Const|PublicPort}
+register=${Const|BaseURL}:${Const|PublicPort}/wifi/user/account/
 
 ; help: optional: page providing further assistance for users of your grid
 help="https://www.outworldz.com/Outworldz_installer/Manual_TroubleShooting.htm"
 
 ; password help: optional: page providing password assistance for users of your grid
-;password = ${Const|BaseURL}/password
+password=${Const|BaseURL}/${Const|PublicPort}/wifi/forgotpassword
+
 ; HG address of the gatekeeper, if you have one
 ; this is the entry point for all the regions of the world
 ; gatekeeper = ${Const|BaseURL}:${Const|PublicPort}/
